Change operationIds in api.yaml
